[package]
name = "rgoap"
version = "0.1.0"
authors = ["Samuel Loretan <tynril@gmail.com>"]
license = "MIT"
description = "Goal-Oriented Action-Planning"
repository = "https://github.com/tynril/rgoap"
documentation = "https://tynril.github.io/rgoap"
keywords = ["goap", "ai", "action-planning"]
readme = "README.md"

[features]
default = [ ]
use_serde = [ "serde", "serde_derive" ]

[dependencies]
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
pathfinding = "^0.7"

[dev-dependencies]
serde_json = "^1.0"
